force-app/main/default/objects/Case_Counsel__c/Case_Counsel__c.object-meta.xml
<CustomObject>
    <label>Case Counsel</label>
    <nameField>
        <displayFormat>COUNSEL-{00000}</displayFormat>
        <label>Counsel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Counsels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>