force-app/main/default/objects/Case_Counsel__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Counsels</relationshipLabel>
    <relationshipName>Case_Counsels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>