force-app/main/default/objects/Case_Counsel__c/fields/Attorney_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Full_Name__c</fullName>
    <formula>Attorney__r.FirstName +&apos;&apos;+  Attorney__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Full Name</label>
    <type>Text</type>
</CustomField>