force-app/main/default/objects/Case_Counsel__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Case Counsels</relationshipLabel>
    <relationshipName>Case_Counsels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>