force-app/main/default/objects/Case_Counsel__c/fields/Client_Matter_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Matter_Id__c</fullName>
    <label>Client Matter Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>