force-app/main/default/objects/Case_Counsel__c/fields/Counsel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Notes__c</fullName>
    <label>Counsel Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>