force-app/main/default/objects/Case_Counsel__c/fields/Counsel_Side__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Side__c</fullName>
    <label>Counsel Side</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff / Petitioner</fullName>
            </value>
            <value>
                <fullName>Defense / Respondent</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Court-Appointed</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Third-Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>