force-app/main/default/objects/Case_Counsel__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <label>Date Entered</label>
    <required>true</required>
    <type>Date</type>
</CustomField>