force-app/main/default/objects/Case_Counsel__c/fields/Date_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrawn__c</fullName>
    <label>Date Withdrawn</label>
    <type>Date</type>
</CustomField>