force-app/main/default/objects/Case_Counsel__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>ISBLANK(Date_Withdrawn__c)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>