force-app/main/default/objects/Case_Counsel__c/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Law Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Counsels</relationshipLabel>
    <relationshipName>Case_Counsels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>