force-app/main/default/objects/Case_Counsel__c/fields/Representing_Party__c.field-meta.xml
<CustomField>
    <fullName>Representing_Party__c</fullName>
    <label>Representing Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>