force-app/main/default/objects/Case_Counsel__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Substitution of Counsel</fullName>
            </value>
            <value>
                <fullName>Case Concluded</fullName>
            </value>
            <value>
                <fullName>Conflict Identified</fullName>
            </value>
            <value>
                <fullName>Client Decision</fullName>
            </value>
            <value>
                <fullName>Attorney Departure from Firm</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>